foolish/foolish-core/src/snapshots/foolish_core__approval_tests__complex_unanchored_seeks_with_operations.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {a=10, b=20, c=30, result=#-1 + #-2, result2=#-1 * #-2, result3=#-1 - #-2;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(10) [INDEPENDENT]
  b = 
  Int(20) [INDEPENDENT]
  c = 
  Int(30) [INDEPENDENT]
  result = 
  Operator(+) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
    Index(offset=-2, FREE) [EMBRYONIC]
  result2 = 
  Operator(*) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
    Index(offset=-2, FREE) [EMBRYONIC]
  result3 = 
  Operator(-) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
    Index(offset=-2, FREE) [EMBRYONIC]
RESULT:
Brane [NK]
  a = 
  Int(10) [INDEPENDENT]
  b = 
  Int(20) [INDEPENDENT]
  c = 
  Int(30) [INDEPENDENT]
  result = 
  Int(50) [CONSTANT]
  result2 = 
  Operator(*) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
    Int(30) [INDEPENDENT]
  result3 = 
  Operator(-) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
