foolish/foolish-core/src/snapshots/foolish_core__approval_tests__concat_shadow_scope.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  outerˍx = 
  Int(99) [INDEPENDENT]
  inner = 
  Brane [EMBRYONIC]
    x = 
    Int(1) [INDEPENDENT]
    z = 
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  x = 
  Int(0) [INDEPENDENT]
  level1 = 
  Brane [EMBRYONIC]
    x = 
    Int(10) [INDEPENDENT]
    level2 = 
    Brane [EMBRYONIC]
      x = 
      Int(20) [INDEPENDENT]
      c = 
      Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  d = 
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  b1 = 
  Brane [EMBRYONIC]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
  b2 = 
  Brane [EMBRYONIC]
    x = 
    Int(3) [INDEPENDENT]
    z = 
    Int(4) [INDEPENDENT]
  merged = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^b1$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^b2$', dir=BACKWARD, FREE) [EMBRYONIC]
  firstˍx = 
  Search(pattern='x', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  searchˍy = 
  Search(pattern='y', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  searchˍz = 
  Search(pattern='z', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  headˍm = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  tailˍm = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
  r = 
  Brane [EMBRYONIC]
    x = 
    Int(1) [INDEPENDENT]
  s = 
  Brane [EMBRYONIC]
    x = 
    Int(2) [INDEPENDENT]
  t = 
  Brane [EMBRYONIC]
    x = 
    Int(3) [INDEPENDENT]
  u = 
  Brane [EMBRYONIC]
    x = 
    Int(4) [INDEPENDENT]
  rs = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^r$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^s$', dir=BACKWARD, FREE) [EMBRYONIC]
  tu = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^t$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^u$', dir=BACKWARD, FREE) [EMBRYONIC]
  rstu = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^rs$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^tu$', dir=BACKWARD, FREE) [EMBRYONIC]
  braneˍok = 
  Brane [EMBRYONIC]
    p = 
    Int(1) [INDEPENDENT]
    q = 
    Int(2) [INDEPENDENT]
  braneˍbad = 
  Brane [EMBRYONIC]
    r = 
    Int(3) [INDEPENDENT]
    s = 
    Search(pattern='^undefinedˍvar$', dir=BACKWARD, FREE) [EMBRYONIC]
  partialˍmerge = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^braneˍok$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^braneˍbad$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  outerˍx = 
  Int(99) [INDEPENDENT]
  inner = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    z = 
    Int(1) [INDEPENDENT]
  x = 
  Int(0) [INDEPENDENT]
  level1 = 
  Brane [CONSTANT]
    x = 
    Int(10) [INDEPENDENT]
    level2 = 
    Brane [CONSTANT]
      x = 
      Int(20) [INDEPENDENT]
      c = 
      Int(20) [INDEPENDENT]
  d = 
  Int(0) [INDEPENDENT]
  b1 = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
  b2 = 
  Brane [CONSTANT]
    x = 
    Int(3) [INDEPENDENT]
    z = 
    Int(4) [INDEPENDENT]
  merged = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
    x = 
    Int(3) [INDEPENDENT]
    z = 
    Int(4) [INDEPENDENT]
  firstˍx = 
  Int(1) [INDEPENDENT]
  searchˍy = 
  Int(2) [INDEPENDENT]
  searchˍz = 
  Int(4) [INDEPENDENT]
  headˍm = 
  Int(1) [INDEPENDENT]
  tailˍm = 
  Int(4) [INDEPENDENT]
  r = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
  s = 
  Brane [CONSTANT]
    x = 
    Int(2) [INDEPENDENT]
  t = 
  Brane [CONSTANT]
    x = 
    Int(3) [INDEPENDENT]
  u = 
  Brane [CONSTANT]
    x = 
    Int(4) [INDEPENDENT]
  rs = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    x = 
    Int(2) [INDEPENDENT]
  tu = 
  Brane [CONSTANT]
    x = 
    Int(3) [INDEPENDENT]
    x = 
    Int(4) [INDEPENDENT]
  rstu = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    x = 
    Int(2) [INDEPENDENT]
    x = 
    Int(3) [INDEPENDENT]
    x = 
    Int(4) [INDEPENDENT]
  braneˍok = 
  Brane [CONSTANT]
    p = 
    Int(1) [INDEPENDENT]
    q = 
    Int(2) [INDEPENDENT]
  braneˍbad = 
  Brane [WOCONSTANIC]
    r = 
    Int(3) [INDEPENDENT]
    s = 
    Search(pattern='^undefinedˍvar$', dir=BACKWARD, FREE) [ECONSTANIC]
  partialˍmerge = 
  Brane [CONSTANT]
    p = 
    Int(1) [INDEPENDENT]
    q = 
    Int(2) [INDEPENDENT]
