foolish/foolish-core/src/snapshots/foolish_core__approval_tests__concatenationBasics.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  testˍ1ˍconcatenateˍfoolishˍbranes = 
  Brane [EMBRYONIC]
    c = 
    Concatenation(elements=2) [EMBRYONIC]
      Brane [EMBRYONIC]
        a = 
        Int(1) [INDEPENDENT]
        b = 
        Int(2) [INDEPENDENT]
        c = 
        Int(3) [INDEPENDENT]
      Brane [EMBRYONIC]
        e = 
        Int(4) [INDEPENDENT]
        f = 
        Int(5) [INDEPENDENT]
        g = 
        Int(6) [INDEPENDENT]
  testˍ2ˍconcatenateˍbraneˍreferences = 
  Brane [EMBRYONIC]
    b1 = 
    Brane [EMBRYONIC]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
    b2 = 
    Brane [EMBRYONIC]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c = 
    Concatenation(elements=2) [EMBRYONIC]
      Search(pattern='^b1$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b2$', dir=BACKWARD, FREE) [EMBRYONIC]
  testˍ3ˍconcatenateˍmixedˍreferenceˍandˍfoolishˍbranes = 
  Brane [EMBRYONIC]
    b1 = 
    Brane [EMBRYONIC]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
    b2 = 
    Brane [EMBRYONIC]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c1 = 
    Concatenation(elements=2) [EMBRYONIC]
      Brane [EMBRYONIC]
        a = 
        Int(1) [INDEPENDENT]
        b = 
        Int(2) [INDEPENDENT]
        c = 
        Int(3) [INDEPENDENT]
      Search(pattern='^b2$', dir=BACKWARD, FREE) [EMBRYONIC]
    c2 = 
    Concatenation(elements=2) [EMBRYONIC]
      Search(pattern='^b1$', dir=BACKWARD, FREE) [EMBRYONIC]
      Brane [EMBRYONIC]
        e = 
        Int(4) [INDEPENDENT]
        f = 
        Int(5) [INDEPENDENT]
        g = 
        Int(6) [INDEPENDENT]
  testˍ4ˍconcatenateˍconcatenatedˍbrnes = 
  Brane [EMBRYONIC]
    b1 = 
    Brane [EMBRYONIC]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
    b2 = 
    Brane [EMBRYONIC]
      c = 
      Int(3) [INDEPENDENT]
      d = 
      Int(4) [INDEPENDENT]
    b3 = 
    Brane [EMBRYONIC]
      e = 
      Int(5) [INDEPENDENT]
      f = 
      Int(6) [INDEPENDENT]
    c1 = 
    Concatenation(elements=3) [EMBRYONIC]
      Search(pattern='^b1$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b2$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b3$', dir=BACKWARD, FREE) [EMBRYONIC]
    c2 = 
    Concatenation(elements=3) [EMBRYONIC]
      Search(pattern='^b3$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b2$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b1$', dir=BACKWARD, FREE) [EMBRYONIC]
    c3 = 
    Concatenation(elements=3) [EMBRYONIC]
      Search(pattern='^b2$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b1$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b3$', dir=BACKWARD, FREE) [EMBRYONIC]
    r = 
    Concatenation(elements=3) [EMBRYONIC]
      Search(pattern='^c1$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^c2$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^c3$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  testˍ1ˍconcatenateˍfoolishˍbranes = 
  Brane [CONSTANT]
    c = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
  testˍ2ˍconcatenateˍbraneˍreferences = 
  Brane [CONSTANT]
    b1 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
    b2 = 
    Brane [CONSTANT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
  testˍ3ˍconcatenateˍmixedˍreferenceˍandˍfoolishˍbranes = 
  Brane [CONSTANT]
    b1 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
    b2 = 
    Brane [CONSTANT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c1 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c2 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
  testˍ4ˍconcatenateˍconcatenatedˍbrnes = 
  Brane [CONSTANT]
    b1 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
    b2 = 
    Brane [CONSTANT]
      c = 
      Int(3) [INDEPENDENT]
      d = 
      Int(4) [INDEPENDENT]
    b3 = 
    Brane [CONSTANT]
      e = 
      Int(5) [INDEPENDENT]
      f = 
      Int(6) [INDEPENDENT]
    c1 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      d = 
      Int(4) [INDEPENDENT]
      e = 
      Int(5) [INDEPENDENT]
      f = 
      Int(6) [INDEPENDENT]
    c2 = 
    Brane [CONSTANT]
      e = 
      Int(5) [INDEPENDENT]
      f = 
      Int(6) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      d = 
      Int(4) [INDEPENDENT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
    c3 = 
    Brane [CONSTANT]
      c = 
      Int(3) [INDEPENDENT]
      d = 
      Int(4) [INDEPENDENT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      e = 
      Int(5) [INDEPENDENT]
      f = 
      Int(6) [INDEPENDENT]
    r = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      d = 
      Int(4) [INDEPENDENT]
      e = 
      Int(5) [INDEPENDENT]
      f = 
      Int(6) [INDEPENDENT]
      e = 
      Int(5) [INDEPENDENT]
      f = 
      Int(6) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      d = 
      Int(4) [INDEPENDENT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      d = 
      Int(4) [INDEPENDENT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      e = 
      Int(5) [INDEPENDENT]
      f = 
      Int(6) [INDEPENDENT]
