foolish/foolish-core/src/snapshots/foolish_core__approval_tests__concatenationSearch.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  searchˍtargetˍ1 = 
  Brane [EMBRYONIC]
    a = 
    Operator(-) [EMBRYONIC]
      Int(1) [INDEPENDENT]
    c = 
    Operator(-) [EMBRYONIC]
      Int(2) [INDEPENDENT]
    b = 
    Operator(-) [EMBRYONIC]
      Int(2) [INDEPENDENT]
    c = 
    Brane [EMBRYONIC]
      a = 
      Operator(-) [EMBRYONIC]
        Int(1) [INDEPENDENT]
      b = 
      Operator(-) [EMBRYONIC]
        Int(2) [INDEPENDENT]
      c = 
      Operator(-) [EMBRYONIC]
        Int(3) [INDEPENDENT]
      e = 
      Operator(-) [EMBRYONIC]
        Int(4) [INDEPENDENT]
      f = 
      Operator(-) [EMBRYONIC]
        Int(5) [INDEPENDENT]
      g = 
      Operator(-) [EMBRYONIC]
        Int(6) [INDEPENDENT]
  searchˍtargetˍ2 = 
  Brane [EMBRYONIC]
    a = 
    Int(5) [INDEPENDENT]
    c = 
    Int(6) [INDEPENDENT]
    b = 
    Int(7) [INDEPENDENT]
    c2 = 
    Brane [EMBRYONIC]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c = 
    Brane [EMBRYONIC]
      a = 
      Int(0) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Operator(-) [EMBRYONIC]
        Int(6) [INDEPENDENT]
  searchˍtargetˍ1 = 
  Brane [EMBRYONIC]
    a = 
    Int(1) [INDEPENDENT]
    c = 
    Int(2) [INDEPENDENT]
    b = 
    Int(2) [INDEPENDENT]
    c = 
    Brane [EMBRYONIC]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
  testˍ1ˍconcatenateˍmixˍofˍreferenceˍandˍnavigation = 
  Brane [EMBRYONIC]
    b1 = 
    Brane [EMBRYONIC]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
    b2 = 
    Brane [EMBRYONIC]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c1 = 
    Concatenation(elements=3) [EMBRYONIC]
      Brane [EMBRYONIC]
        a = 
        Int(1) [INDEPENDENT]
        b = 
        Int(2) [INDEPENDENT]
        c = 
        Int(3) [INDEPENDENT]
      Search(pattern='^b2$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^c$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    c2 = 
    Concatenation(elements=4) [EMBRYONIC]
      Search(pattern='^c$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
      Search(pattern='^b1$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^c2$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
      Brane [EMBRYONIC]
        e = 
        Int(4) [INDEPENDENT]
        f = 
        Int(5) [INDEPENDENT]
        g = 
        Int(6) [INDEPENDENT]
  testˍ2ˍconstanicˍseekˍfindsˍafterˍconcatenation = 
  Brane [EMBRYONIC]
    OB1 = 
    Brane [EMBRYONIC]
      a = 
      Int(1) [INDEPENDENT]
      message = 
      Int(2) [INDEPENDENT]
      only = 
      Int(1) [INDEPENDENT]
    OB2 = 
    Brane [EMBRYONIC]
      whichˍ1 = 
      Operator(+) [EMBRYONIC]
        Index(offset=-1, FREE) [EMBRYONIC]
        Int(1) [INDEPENDENT]
    OB = 
    Concatenation(elements=2) [EMBRYONIC]
      Search(pattern='^OB1$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^OB2$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [NK]
  searchˍtargetˍ1 = 
  Brane [CONSTANT]
    a = 
    Int(-1) [CONSTANT]
    c = 
    Int(-2) [CONSTANT]
    b = 
    Int(-2) [CONSTANT]
    c = 
    Brane [CONSTANT]
      a = 
      Int(-1) [CONSTANT]
      b = 
      Int(-2) [CONSTANT]
      c = 
      Int(-3) [CONSTANT]
      e = 
      Int(-4) [CONSTANT]
      f = 
      Int(-5) [CONSTANT]
      g = 
      Int(-6) [CONSTANT]
  searchˍtargetˍ2 = 
  Brane [CONSTANT]
    a = 
    Int(5) [INDEPENDENT]
    c = 
    Int(6) [INDEPENDENT]
    b = 
    Int(7) [INDEPENDENT]
    c2 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c = 
    Brane [CONSTANT]
      a = 
      Int(0) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(-6) [CONSTANT]
  searchˍtargetˍ1 = 
  Brane [CONSTANT]
    a = 
    Int(1) [INDEPENDENT]
    c = 
    Int(2) [INDEPENDENT]
    b = 
    Int(2) [INDEPENDENT]
    c = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
  testˍ1ˍconcatenateˍmixˍofˍreferenceˍandˍnavigation = 
  Brane [CONSTANT]
    b1 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
    b2 = 
    Brane [CONSTANT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c1 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
    c2 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      a = 
      Int(1) [INDEPENDENT]
      b = 
      Int(2) [INDEPENDENT]
      c = 
      Int(3) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
      e = 
      Int(4) [INDEPENDENT]
      f = 
      Int(5) [INDEPENDENT]
      g = 
      Int(6) [INDEPENDENT]
  testˍ2ˍconstanicˍseekˍfindsˍafterˍconcatenation = 
  Brane [NK]
    OB1 = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      message = 
      Int(2) [INDEPENDENT]
      only = 
      Int(1) [INDEPENDENT]
    OB2 = 
    Brane [NK]
      whichˍ1 = 
      Operator(+) [NK]
        ??? (constanic_clone called on NYE FIR) [NK]
        Int(1) [INDEPENDENT]
    OB = 
    Brane [CONSTANT]
      a = 
      Int(1) [INDEPENDENT]
      message = 
      Int(2) [INDEPENDENT]
      only = 
      Int(1) [INDEPENDENT]
