foolish/foolish-core/src/snapshots/foolish_core__approval_tests__concatenation_basic.snap
---
source: foolish-core/src/lib.rs
assertion_line: 71
expression: output
---
INPUT: { a={p=1;q=2}; b={r=3}; c = a b; }
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Brane [EMBRYONIC]
    p = 
    Int(1) [INDEPENDENT]
    q = 
    Int(2) [INDEPENDENT]
  b = 
  Brane [EMBRYONIC]
    r = 
    Int(3) [INDEPENDENT]
  c = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Brane [CONSTANT]
    p = 
    Int(1) [INDEPENDENT]
    q = 
    Int(2) [INDEPENDENT]
  b = 
  Brane [CONSTANT]
    r = 
    Int(3) [INDEPENDENT]
  c = 
  Brane [CONSTANT]
    p = 
    Int(1) [INDEPENDENT]
    q = 
    Int(2) [INDEPENDENT]
    r = 
    Int(3) [INDEPENDENT]
